--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,10 @@ services:
     image: postgres:15-alpine
     restart: always
     environment:
-      POSTGRES_USER: kasparro_user
-      POSTGRES_PASSWORD: kasparro_password
-      POSTGRES_DB: kasparro_db
+      # FIX: Use variables ${NAME} instead of raw strings
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5432:5432"
     volumes:
@@ -15,7 +16,6 @@ services:
 
   app:
     build: .
-    # Reload allows you to edit code without restarting docker
     command: uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
       - .:/app
@@ -23,10 +23,8 @@ services:
       - "8000:8000"
     depends_on:
       - db
-    environment:
-      DATABASE_URL: postgresql://kasparro_user:kasparro_password@db:5432/kasparro_db
-      # Add your API Key here later
-      API_KEY: "replace_with_provided_key" 
+    env_file:
+      - .env  # This loads the variables from your local .env file
 
 volumes:
   postgres_data:
